@@ -1,38 +1,0 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man
-.TH SPH_SAFF  "1" " " "sph_saff Antiprism 0.25.1 - http://www.antiprism.com" "User Commands"
-.SH NAME
-sph_saff - spiral points on a sphere (Saff and Kuiljaars)
-.SH SYNOPSIS
-.B sph_saff
-[\fI\,options\/\fR] \fI\,num_points\/\fR
-.SH DESCRIPTION
-Distribute a number of points on a sphere using the algorithm
-from "Distributing many points on a sphere" by E.B. Saff and
-A.B.J. Kuijlaars, Mathematical Intelligencer 19.1 (1997) 5\-\-11.
-.PP
-Options
-.HP
-\fB\-h\fR,\-\-help this help message (run 'off_util \fB\-H\fR help' for general help)
-.HP
-\fB\-\-version\fR version information
-.TP
-\fB\-a\fR <ang>
-increment each point placement by a fixed angle instead of
-using Saff and Kuiljaars' placement method
-.TP
-\fB\-p\fR
-place points at the two poles
-.HP
-\fB\-o\fR <file> write output to file (default: write to standard output)
-.SH "SEE ALSO"
-The full documentation for
-.B sph_saff
-is maintained as a Texinfo manual.  If the
-.B info
-and
-.B sph_saff
-programs are properly installed at your site, the command
-.IP
-.B info sph_saff
-.PP
-should give you access to the complete manual.
