@@ -14,10 +14,11 @@ LDADD = $(top_builddir)/base/libantiprism.la
 
 
 bin_PROGRAMS = twist spidron off2txt dome_layer poly_weave mmop_origami \
-	       off2m m2off kaleido radial
+	       jitterbug string_art kaleido radial off2m m2off
 
 dist_man1_MANS = twist.1 spidron.1 off2txt.1 dome_layer.1 poly_weave.1 \
-		 mmop_origami.1 off2m.1 m2off.1 kaleido.1 radial.1
+		 mmop_origami.1 jitterbug.1 string_art.1 kaleido.1 radial.1 \
+		 off2m.1 m2off.1
 
 twist_SOURCES = twist.cc
 spidron_SOURCES = spidron.cc
@@ -25,8 +26,10 @@ off2txt_SOURCES = off2txt.cc
 dome_layer_SOURCES = dome_layer.cc
 poly_weave_SOURCES = poly_weave.cc
 mmop_origami_SOURCES = mmop_origami.cc
-m2off_SOURCES = m2off.cc
-off2m_SOURCES = off2m.cc
+jitterbug_SOURCES = jitterbug.cc
+string_art_SOURCES = string_art.cc
 kaleido_SOURCES = kaleido.cc
 radial_SOURCES = radial.cc
+m2off_SOURCES = m2off.cc
+off2m_SOURCES = off2m.cc
 
